<resources>
    <string name="app_name">Android_Lesson_10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="delete_note">Delete note</string>
    <string name="tittle">Tittle:</string>
    <string name="tittle_text">Tittle text</string>
    <string name="body_note">Body Note:</string>
    <string name="done">Done</string>
    <string name="date_of_creation">Date of creation:</string>
    <string name="exit">Exit</string>
    <string name="new_note">New note</string>
    <string name="add_new_note">Add new note</string>
    <string name="go_back">Go back</string>
    <string name="body">Body:</string>
    <string name="save_changes">Save changes</string>
    <string name="from_gf">From GF</string>
    <string name="from_sp">From SP</string>
    <string name="from_array">From array</string>
</resources>