<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/sourceArrays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/from_array"/>
        <RadioButton
            android:id="@+id/sourceSP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_sp"/>
        <RadioButton
            android:id="@+id/sourceGF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_gf"/>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noteRecyclerView"
        android:layout_marginTop="?actionBarSize"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/fragment_note_list_recycler_item"/>

</FrameLayout>