<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="5dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/purple_200"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle" />

            <TextView
                android:id="@+id/note_view_item_tittle_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tittle_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_note" />

            <TextView
                android:id="@+id/note_view_item_body_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/body_note" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/note_view_item_is_done"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:background="@drawable/button_is_done"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/date_of_creation" />

            <TextView
                android:id="@+id/note_view_item_date_of_creation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/date_of_creation" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>